Version 1.2.2:
- Changed all Int16 to Int32 due to issues with Int16 values
- RDS is now made for multiple RDSGateway servers in different domains

Version 1.2.1:
- Proxmox - With thanks to Centron GmbH
- Guacamole for VPS2012 - With thanks to Centron GmbH
- Enter key can be used in the global search field now
- Fixed errors while clicking on search reasults from Hosted Exchange (distribution lists, ressource mailbox, etc.)
- Fixed Enterprise Solution Report selection in scheduled tasks
- Fixed Database Usage Notifications selection in scheduled tasks
- Fixed wrong active menu item, if you click on Configuration - Servers
- Fixed Scheduled Tasks menu for serveradmin is now language independent
- Fixed Scheduled Tasks pages - Start button on last item and second page items started the wrong tasks
- Fixed reload of domain view after detaching a domain as serveradmin
- Ecommerce scheduled tasks hidden by changing to RoleID 0 (doesn't match even serveradmin), because Ecommerce module is currently not implemented
- Many bugfixes and enhancements for Windows event log viewer in Servers -> Settings. Now the event log can also be read from localized Windows systems.
- Bugfix and design enhancements for Remote Desktop Sessions in Servers -> Settings.
- Serv-U transformed to x64 - This will now require a 64bit app pool.
- Removed website list changes
- Removed several lingering files
- Removed Lets Encypt
- Removed MSPControl files found in source.

Version 1.2.0:
- Fixed several form fields
- Fixed Exchange 2013/2016 Public folders with multiple users and the same display name
- Updates most service icons
- Fix for collate in GetDnsRecordsTotal Procedure
- Fixed MS DNS 2012+ provider module for windows 2016 (bypass microsoft bug)
- Fixed shared ip display for users
- Updated UI for Hosting Plan Quotas and Space Quotas 
- Fix for when changing the name of the Exchange Disclaimer
- Fixed RDS User Session buttons
- Updated FTP page formatting