@@ -1,6 +1,7 @@
 Version 1.2.2:
 - Changed all Int16 to Int32 due to issues with Int16 values
 - RDS is now made for multiple RDSGateway servers in different domains
+- RDS Added option in hosting plan to prevent user from adding new RDSServer to HostedOrg
 
 Version 1.2.1:
 - Proxmox - With thanks to Centron GmbH
